src/tui/snapshots/gh_overview__tui__view__tests__header_warnings_and_daemon_down.snap
---
source: src/tui/view.rs
expression: "draw(&app, 100, 4).backend()"
---
" gh-overview   [1] To review (2 · 1 reviewed)   [2] My PRs (1)  ● daemon not running — ghov install "
" ▲ personal: gh auth token failed (last ok 10m ago)   ▲ notifications are off for gh-overview       "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
" enter open · s snooze · d done · a reviewed · m mute today · r refresh · q quit                    "
