src/tui/snapshots/gh_overview__tui__view__tests__mine_tab_narrow.snap
---
source: src/tui/view.rs
expression: "draw(&app, 80, 6).backend()"
---
" gh-overview   [1] To review (2 · 1 reviewed)   [2] My PRs (1) ● polled 12s ago "
"────────────────────────────────────────────────────────────────────────────────"
"  REPO                 #      TITLE            WHY                    ALERT     "
"▶ octocat/dotfiles     310    [draft] PR 310   3 threads · changes: a 🔔 pinging" Hidden by multi-width symbols: [(71, " ")]
"────────────────────────────────────────────────────────────────────────────────"
" enter open · s snooze · d done · a reviewed · r refresh · tab switch · q quit  "
