src/tui/snapshots/gh_overview__tui__view__tests__review_tab_narrow.snap
---
source: src/tui/view.rs
expression: "draw(&needing_review_only(app()), 80, 7).backend()"
---
" gh-overview   [1] To review (2 · 1 reviewed)   [2] My PRs (1) ● polled 12s ago "
"────────────────────────────────────────────────────────────────────────────────"
"  REPO                 #      TITLE         ALERT      ACCT       VIA           "
"▶ acme/gateway         412    [api] add ra… 🔔 pinging work                     " Hidden by multi-width symbols: [(45, " ")]
"  acme/infrastructure  77     PR 77                    work       team:platform "
"────────────────────────────────────────────────────────────────────────────────"
" enter open · s snooze · d done · a reviewed · r refresh · tab switch · q quit  "
