src/tui/snapshots/gh_overview__tui__view__tests__review_tab_showing_reviewed.snap
---
source: src/tui/view.rs
expression: "draw(&app(), 120, 8).backend()"
---
" gh-overview   [1] To review (2 · 1 reviewed)   [2] My PRs (1)                                         ● polled 12s ago "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"  REPO                         #      TITLE                     AUTHOR         AGE  ALERT      ACCT       VIA           "
"▶ acme/gateway                 412    [api] add rate limits to… alice          10h  🔔 pinging work                     " Hidden by multi-width symbols: [(85, " ")]
"  acme/infrastructure          77     PR 77                     bob            10h             work       team:platform "
"  acme/web                     1719   [changes: raad] content … sam            10h             work                     "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" enter open · s snooze · d done · a reviewed · r refresh · tab switch · q quit                                          "
